--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,17 +8,17 @@ html(lang="zh-tw")
     body
         header
             a(class="logo" href=ehanlin+"/index.html")
-            span(class="info")
-                span(class="tel") 課程咨詢：
-                    a(href="tel:0800008811") 0800-0088-11
-                span(class="icons")
-                    a(class="facebook" target="_blank" href="https://www.facebook.com/ehanlin.com.tw")
-                    a(class="line" target="_blank" href="http://line.me/R/ti/p/MtsRQz_Hn5")
+            span(class="tel") 課程咨詢
+                a(href="tel:0800008811")
+                    i(class="fa fa-phone" aria-hidden="true")
+                    | 0800-008811
+            span(class="icons")
+                a(class="facebook" target="_blank" href="https://www.facebook.com/ehanlin.com.tw")
+                a(class="line" target="_blank" href="http://line.me/R/ti/p/MtsRQz_Hn5")
         nav
             each site in ["banner", "teachers", "contents", "prices"]
                 a(href="#"+site)
-        section(id="banner")
-            img(src="./img/section_2.png")/
+        section(id="banner"): img(src="./img/section_2.png")/
         section
             img(src="./img/section_3.png")/
             ul(class="benefits")
@@ -39,15 +39,11 @@ html(lang="zh-tw")
                 input(id="teacher_"+num name="teacher" type="radio")
             ol(class="teachers")
                 each num in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-                    li
-                        label(for="teacher_"+num)
-                            img(src="./img/teacher/teacher_"+num+".png")/
+                    li: label(for="teacher_"+num): img(src="./img/teacher/teacher_"+num+".png")/
             ol(class="teacher-infos")
                 each num in [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-                    li
-                        img(src="./img/teacher/teacher_info_"+num+".png")            
-        section(id="contents")
-            img(src="./img/section_6.png")/
+                    li: img(src="./img/teacher/teacher_info_"+num+".png")            
+        section(id="contents"): img(src="./img/section_6.png")/
         section(id="prices")
             img(src="./img/section_7.png")/
             each num in [1, 2, 3, 4]
