加回誤刪的圖

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -18,7 +18,8 @@ html(lang="zh-tw")
         nav
             each site in ["banner", "teachers", "contents", "prices"]
                 a(href="#"+site)
-        section#banner: img(src="./img/section_2.png")/
+        section#banner: img(src="./img/section_1.png")/
+        section: img(src="./img/section_2.png")/
         section
             img(src="./img/section_3.png")/
             ul.benefits
