--- a/src/less/index.less
+++ b/src/less/index.less
@@ -100,7 +100,7 @@ body {
         width: 100%;
     }
 
-    .cardRotateY() {
+    .cardRotate(@direction) {
         > .front, > .back {
             position: absolute;
             top: 0px;
@@ -109,14 +109,17 @@ body {
             transition: all 1s;
         }
 
-        > .front {transform: rotateY(0deg);}
-        > .back  {transform: rotateY(180deg);}
+        > .front {transform: ~"@{direction}(0deg);"}
+        > .back  {transform: ~"@{direction}(180deg);"}
 
         &:hover {
-            > .front {transform: rotateY(180deg);}
-            > .back  {transform: rotateY(0deg);}
-        }        
+            > .front {transform: ~"@{direction}(180deg);"}
+            > .back  {transform: ~"@{direction}(0deg);"}
+        }
     }
+
+    .cardRotateY() { .cardRotate(rotateY); }
+    .cardRotateX() { .cardRotate(rotateX); }
 
     .benefits > .card {
         list-style-type: none;
@@ -157,7 +160,13 @@ body {
                 margin-top: -100px;   
             }
 
-            .cardRotateY();
+            &:nth-child(odd) {
+                .cardRotateY();
+            }
+
+            &:nth-child(even) {
+                .cardRotateX();
+            }
         }
     }
 
