修改 大小於符號轉碼

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -49,8 +49,7 @@ html(lang="zh-tw")
         section#contents: img(src="./img/section_6.png")/
         input#enter-alert
         div.enter-alert
-            p 
-                | 此為<學測早鳥預購專案>
+            p 此為&lt;學測早鳥預購專案&gt;
                 br/
                 | 請您立即來電
                 strong 0800 - 008811
