--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -8,7 +8,7 @@ html(lang="zh-tw")
     body
         header
             a.logo(href=ehanlin+"/index.html")
-            span.tel 課程咨詢
+            span.tel 課程諮詢
                 a(href="tel:0800008811")
                     i(class="fa fa-phone" aria-hidden="true")
                     | 0800-008811
