--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,7 +3,7 @@ doctype html
 html(lang="zh-tw")
     head
         meta(charset="UTF-8")
-        title 高中學測課程廣告介紹頁 (6月預購版)
+        title 學測總複習課程優惠方案
         link(rel="stylesheet" type="text/css" href="./css/index.css")
     body
         header
