調整功能：調整 失效的連結 及 新增 upload gcs 另一種方式 trello#w3HW8jPd

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -59,10 +59,10 @@ html(lang="zh-tw")
         section#prices
             img(src="./img/section_7.png?ts=" + ts)/
             each url in ["y105_sh_rev_all_et", "y106_sh_rev_mainall_et", "y107_sh_rev_science_et", "y107_sh_rev_society_et"]
-                a.enter(target="_blank" href= ehanlin + "/type/ONLINE/id/"+url+"/SalesPlans.html")
+                a.enter(target="_blank" href= ehanlin + "/products/type/ONLINE/id/"+url+"/SalesPlans.html")
         footer
             img(src="./img/single.png?ts=" + ts)/
-            a(target="_blank" href=ehanlin+"/type/ONLINE/category/【e名師】高中學測總複習/SalesPlans.html")
+            a(target="_blank" href=ehanlin+"/products/type/ONLINE/category/【e名師】高中學測總複習/SalesPlans.html")
 
             img(src="./img/footer.png?ts=" + ts)/
             a(target="_blank" href=ehanlin+"/event/info/")
