調整功能：加入 ehanlin logo icon

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,6 +6,7 @@ html(lang="zh-tw")
         meta(charset="UTF-8")
         title 學測總複習課程優惠方案
         link(rel="stylesheet" type="text/css" href="./css/index.css?ts=" + ts)
+        link(rel='icon', href='/images/favicon.png', type='image/png')
 
         // Google Tag Manager
         script(type='text/javascript').
