--- a/src/less/index.less
+++ b/src/less/index.less
@@ -26,6 +26,7 @@ body {
             width: 304px;
             height: 35px;
             background: url(https://www.ehanlin.com.tw/images/ehanlin_logo.png);
+            background-size: 304px 35px;
         }
 
         .tel {
