--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -59,11 +59,13 @@ html(lang="zh-tw")
 
         section#prices
             img(src="./img/section_7.png?ts=" + ts)/
-            each url in ["y105_sh_rev_all_et", "y106_sh_rev_mainall_et", "y107_sh_rev_science_et", "y107_sh_rev_society_et"]
-                a.enter(target="_blank" href= ehanlin + "/products/type/ONLINE/id/"+url+"/SalesPlans.html")
+            a.enter(target="_blank" href= ehanlin + "/app/online-showcase/product-list.html#HS&GSAT&EG&all")
+            a.enter(target="_blank" href= ehanlin + "/app/online-showcase/product-list.html#HS&GSAT&EG&all")
+            a.enter(target="_blank" href= ehanlin + "/app/online-showcase/product-package.html?id=y109_sh_rev_naall_group")
+            a.enter(target="_blank" href= ehanlin + "/app/online-showcase/product-list.html#HS&GSAT&EG&all")
         footer
             img(src="./img/single.png?ts=" + ts)/
-            a(target="_blank" href=ehanlin+"/products/type/ONLINE/category/【e名師】高中學測總複習/SalesPlans.html")
+            a(target="_blank" href= ehanlin + "/app/online-showcase/product-list.html#HS&GSAT&all&all")
 
             img(src="./img/footer.png?ts=" + ts)/
             a(target="_blank" href=ehanlin+"/event/info/")
