轉址到新頁面

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -3,6 +3,8 @@
 doctype html
 html(lang="zh-tw")
     head
+        script.
+            document.location.href="https://www.ehanlin.com.tw/event/highscrev/index.html"
         meta(charset="UTF-8")
         title 學測總複習課程優惠方案
         link(rel="stylesheet" type="text/css" href="./css/index.css?ts=" + ts)
